--- a/conf.d/Mitigation.conf
+++ b/conf.d/Mitigation.conf
@@ -10,3 +10,10 @@ server {
  }
 }
 
+server {
+    listen 80;
+    server_name attackerhost;
+    location /sensitive/index.html {
+        return 200 'successfully accessed my secret';
+    }
+}
